Add samplingfeature
